--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
 
             .books-grid {
                 grid-template-columns: 1fr;
+                margin-left: 20px;  
+                margin-right: 20px; 
             }
 
             .stats {
@@ -325,7 +327,7 @@
     <div class="container">
         <header>
             <h1 class="logo">LOF</h1>
-            <p class="subtitle">Library of Ferketox - Your digital library.</p>
+            <p class="subtitle">Library of Ferketox - Your digital library. Read the books of your choice!</p>
         </header>
 
         <div class="stats">
